--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,17 @@
 project(tests)
 
+include_directories(fixtures)
+include_directories(utils)
 
 add_executable(${PROJECT_NAME}
+        fixtures/UmathTest.h
+
+        utils/approx.h
+
         main.cpp
-        VectorTest.cpp)
-target_link_libraries(${PROJECT_NAME} gtest)
+
+        umath/VectorTest.cpp)
+
+target_link_libraries(${PROJECT_NAME}
+        gtest
+        umath)
