I started implementation of UnbakedPixel, Chunk and Surface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(dcdr-suite)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set (CMAKE_CXX_FLAGS "-std=c++1z")
+
 # Output binnaries and shared libraries to the same folder
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
