--- a/dcdr/CMakeLists.txt
+++ b/dcdr/CMakeLists.txt
@@ -14,10 +14,10 @@ set(SOURCE_FILES
         src/scene/objects/Sphere.cpp
         src/scene/objects/Sphere.h
 
-        src/tracing/Intersection.h
+        src/tracing/IntersectionInfo.h
         src/tracing/Ray.h
 
-        )
+        src/tracing/Intersection.h src/renderer/UnbakedPixel.cpp src/renderer/UnbakedPixel.h src/DcdrConstants.h src/DcdrConstants.cpp src/renderer/Chunk.cpp src/renderer/Chunk.h src/renderer/Surface.cpp src/renderer/Surface.h src/renderer/IChunkRenderer.h src/renderer/IChunkExchangeNode.h src/renderer/ChunkExchangeNodeStub.cpp src/renderer/ChunkExchangeNodeStub.h src/renderer/ISurfaceRasterizator.h)
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
 
