Add sdl dependency, moved headers, stub renderer

--- a/dcdr-cli/CMakeLists.txt
+++ b/dcdr-cli/CMakeLists.txt
@@ -1,7 +1,13 @@
 project(dcdr-cli)
 
+find_package(SDL2 REQUIRED)
+
 set(SOURCE_FILES
         src/main.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+
+string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIBRARIES})
+
 target_link_libraries(${PROJECT_NAME} PUBLIC dcdr)
