--- a/dcdr/CMakeLists.txt
+++ b/dcdr/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(dcdr)
 
 set(SOURCE_FILES
-        src/DcdrTypes.h
+        include/dcdr/Types.h
 
         src/Tracer.cpp
         include/dcdr/Tracer.h
@@ -17,11 +17,11 @@ set(SOURCE_FILES
         src/tracing/IntersectionInfo.h
         src/tracing/Ray.h
 
-        src/tracing/Intersection.h src/renderer/UnbakedPixel.cpp src/renderer/UnbakedPixel.h src/DcdrConstants.h src/DcdrConstants.cpp src/renderer/Chunk.cpp src/renderer/Chunk.h src/renderer/Surface.cpp src/renderer/Surface.h src/renderer/IChunkRenderer.h src/renderer/IChunkExchangeNode.h src/renderer/ChunkExchangeNodeStub.cpp src/renderer/ChunkExchangeNodeStub.h src/renderer/ISurfaceRasterizator.h)
+        src/tracing/Intersection.h src/renderer/UnbakedPixel.cpp include/dcdr/renderer/UnbakedPixel.h include/dcdr/Constants.h src/Constants.cpp src/renderer/Chunk.cpp include/dcdr/renderer/Chunk.h src/renderer/Surface.cpp include/dcdr/renderer/Surface.h include/dcdr/renderer/IChunkRenderer.h include/dcdr/renderer/IChunkExchangeNode.h src/renderer/ChunkExchangeNodeStub.cpp include/dcdr/renderer/ChunkExchangeNodeStub.h include/dcdr/renderer/ISurfaceRasterizer.h src/renderer/ChunkRendererStub.cpp include/dcdr/renderer/ChunkRendererStub.h)
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE umath)
+target_link_libraries(${PROJECT_NAME} PUBLIC umath)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
