--- a/tests/dcdr-interconnect-test/CMakeLists.txt
+++ b/tests/dcdr-interconnect-test/CMakeLists.txt
@@ -1,10 +1,10 @@
 project(dcdr-interconnect-test)
 
+file(GLOB DCDR_INTERCONNECT_TEST_SOURCES *.cpp)
+
 add_executable(
         ${PROJECT_NAME}
-
-        FlatBuffersExchangeTest.cpp
-        main.cpp)
+        ${DCDR_INTERCONNECT_TEST_SOURCES})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE test-utils)
 target_link_libraries(${PROJECT_NAME} PRIVATE gtest)
