[WebUI] PoC implementation of WebUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,21 @@ cmake_minimum_required(VERSION 3.8)
 
 project(dcdr-suite)
 
+
+# TODO: make flags setting look pretty
+
 set(CMAKE_CXX_STANDARD 17)
 
 if(MSVC)
     set(CMAKE_CXX_FLAGS "/W4 /WX /std:c++latest")
 else()
-    set(CMAKE_CXX_FLAGS "-std=c++1z -Wall -Werror")
+    set(CMAKE_CXX_FLAGS "-std=c++1z -Wall -Wextra -Werror -g")
 endif()
+
+IF(CMAKE_COMPILER_IS_GNUCC)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
+ENDIF(CMAKE_COMPILER_IS_GNUCC)
 
 # Output binnaries and shared libraries to the same folder
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
