--- a/dcdr-interconnect/CMakeLists.txt
+++ b/dcdr-interconnect/CMakeLists.txt
@@ -32,4 +32,4 @@ include_directories(${FlatBuffers_SOURCE_DIR}/include)
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(${PROJECT_NAME} PRIVATE dcdr-common)
+target_link_libraries(${PROJECT_NAME} PRIVATE dcdr-common dcdr-logger)
