--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(gtest-1.8.0)
 add_subdirectory(mongoose)
 add_subdirectory(microtar)
 add_subdirectory(flatbuffers-git)
+add_subdirectory(lodepng)
 
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
