[WebUI] Fixed build scripts

--- a/dcdr-webui/CMakeLists.txt
+++ b/dcdr-webui/CMakeLists.txt
@@ -1,13 +1,16 @@
 project(dcdr-webui)
 
-set(COPIED_JS_FILE ${PROJECT_SOURCE_DIR}/DcdrFlatBuffers.js)
-get_target_property(GENERATED_JS_FILE dcdr-interconnect-flatbuffers GENERATED_JS_FILE)
+set(COPIED_DCDR_FLATBUFFERS_JS_FILE ${PROJECT_SOURCE_DIR}/DcdrFlatBuffers.js)
+set(COPIED_FLATBUFFERS_JS_FILE ${PROJECT_SOURCE_DIR}/flatbuffers.js)
+get_target_property(GENERATED_DCDR_FLATBUFFERS_JS_FILE dcdr-interconnect-flatbuffers GENERATED_JS_FILE)
 
 add_custom_command(
-        OUTPUT ${COPIED_JS_FILE}
-        COMMAND cp ${GENERATED_JS_FILE} ${COPIED_JS_FILE}
+        OUTPUT ${COPIED_DCDR_FLATBUFFERS_JS_FILE} ${COPIED_FLATBUFFERS_JS_FILE}
+        COMMAND cp ${GENERATED_DCDR_FLATBUFFERS_JS_FILE} ${COPIED_DCDR_FLATBUFFERS_JS_FILE}
+        COMMAND cp ${FlatBuffers_SOURCE_DIR}/js/flatbuffers.js ${COPIED_FLATBUFFERS_JS_FILE}
 )
 
-add_custom_target(${PROJECT_NAME} DEPENDS
+add_custom_target(${PROJECT_NAME} ALL DEPENDS
         dcdr-interconnect-flatbuffers
-        ${COPIED_JS_FILE})
+        ${COPIED_DCDR_FLATBUFFERS_JS_FILE}
+        ${COPIED_FLATBUFFERS_JS_FILE})
