--- a/tests/umath-test/CMakeLists.txt
+++ b/tests/umath-test/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(
 
         Vec3Test.cpp
         Mat4Test.cpp)
+add_test(NAME UMathTest COMMAND ${PROJECT_NAME})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE test-utils)
 target_link_libraries(${PROJECT_NAME} PRIVATE gtest)
