--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,7 @@
 *.app
 
 # dcdr specific
-target/
-cmake-build-debug/
+build-*/
 
 # ide specific
-.idea/tasks.xml
-.idea/workspace.xml
-.idea/dictionaries/
-.idea/codeStyles/
+.idea/
