--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(tests)
 
+include(CTest)
+enable_testing()
+
 add_subdirectory(test-utils)
 add_subdirectory(umath-test)
 add_subdirectory(dcdr-interconnect-test)
