--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(libs)
 
-add_subdirectory(gtest-1.8.0)
+if (MSVC)
+	option(gtest_force_shared_crt "" ON)
+endif()
+add_subdirectory(gtest-git)
 add_subdirectory(mongoose)
 add_subdirectory(microtar)
 add_subdirectory(flatbuffers-git)
