--- a/libs/microtar/CMakeLists.txt
+++ b/libs/microtar/CMakeLists.txt
@@ -1,5 +1,12 @@
 project(microtar)
 
+if(MSVC)
+	remove_definitions(/WX)
+else()
+	remove_definitions(-Werror)
+endif()
+
+
 SET(MICROTAR_DIR microtar-git)
 
 SET(MICROTAR_SOURCES
