--- a/dcdr-interconnect/flatbuffers/CMakeLists.txt
+++ b/dcdr-interconnect/flatbuffers/CMakeLists.txt
@@ -14,25 +14,45 @@ set(DCDR_FLATBUFFERS_GENERATED_FILES
         ${DCDR_FLATBUFFERS_GENERATED_CPP_FILE}
         ${DCDR_FLATBUFFERS_GENERATED_JS_FILE})
 
-IF (WIN32)
-    set(MKDIR_COMMAND mkdir)
+if(WIN32)
     set(CAT_COMMAND type)
-ELSE()
-    set(MKDIR_COMMAND mkdir -p)
+	set(MOVE_COMMAND move)
+else()
     set(CAT_COMMAND cat)
-ENDIF()
+	set(MOVE_COMMAND mv)
+endif()
+
+# type command requires backslashes
+if(WIN32) 
+	set(DCDR_FLATBUFFERS_INPUT_FILES_OLD ${DCDR_FLATBUFFERS_INPUT_FILES})
+	set(DCDR_FLATBUFFERS_INPUT_FILES)
+	foreach(_CURRENT_OLD_PATH ${DCDR_FLATBUFFERS_INPUT_FILES_OLD})
+		string(REPLACE "/" "\\" _CURRENT_NEW_PATH ${_CURRENT_OLD_PATH})
+		list(APPEND DCDR_FLATBUFFERS_INPUT_FILES ${_CURRENT_NEW_PATH})
+	endforeach()
+endif()
+
+file(MAKE_DIRECTORY ${DCDR_FLATBUFFERS_GENERATED_ROOT_FOLDER})
+file(MAKE_DIRECTORY ${DCDR_FLATBUFFERS_GENERATED_CPP_FOLDER})
+file(MAKE_DIRECTORY ${DCDR_FLATBUFFERS_GENERATED_JS_FOLDER})
 
 add_custom_command(
         OUTPUT ${DCDR_FLATBUFFERS_GENERATED_FILES}
-        COMMAND ${MKDIR_COMMAND} ${DCDR_FLATBUFFERS_GENERATED_ROOT_FOLDER}
+
+        COMMAND echo "${CAT_COMMAND} ${DCDR_FLATBUFFERS_INPUT_FILES_ARGS} > ${DCDR_FLATBUFFERS_GENERATED_ROOT_FOLDER}/DcdrFlatBuffers.fbs"
+        COMMAND echo "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/flatc --cpp ${DCDR_FLATBUFFERS_GENERATED_ROOT_FOLDER}/DcdrFlatBuffers.fbs"
+        COMMAND echo "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/flatc --js  ${DCDR_FLATBUFFERS_GENERATED_ROOT_FOLDER}/DcdrFlatBuffers.fbs"
+        COMMAND echo "mv DcdrFlatBuffers_generated.h  ${DCDR_FLATBUFFERS_GENERATED_CPP_FOLDER}/DcdrFlatBuffers.h"
+        COMMAND echo "mv DcdrFlatBuffers_generated.js ${DCDR_FLATBUFFERS_GENERATED_JS_FOLDER}/DcdrFlatBuffers.js"
+		
         COMMAND ${CAT_COMMAND} ${DCDR_FLATBUFFERS_INPUT_FILES} > ${DCDR_FLATBUFFERS_GENERATED_ROOT_FOLDER}/DcdrFlatBuffers.fbs
         COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/flatc --cpp ${DCDR_FLATBUFFERS_GENERATED_ROOT_FOLDER}/DcdrFlatBuffers.fbs
         COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/flatc --js  ${DCDR_FLATBUFFERS_GENERATED_ROOT_FOLDER}/DcdrFlatBuffers.fbs
-        COMMAND ${MKDIR_COMMAND} ${DCDR_FLATBUFFERS_GENERATED_CPP_FOLDER}
-        COMMAND ${MKDIR_COMMAND} ${DCDR_FLATBUFFERS_GENERATED_JS_FOLDER}
-        COMMAND mv DcdrFlatBuffers_generated.h  ${DCDR_FLATBUFFERS_GENERATED_CPP_FOLDER}/DcdrFlatBuffers.h
-        COMMAND mv DcdrFlatBuffers_generated.js ${DCDR_FLATBUFFERS_GENERATED_JS_FOLDER}/DcdrFlatBuffers.js
-        DEPENDS flatc ${DCDR_FLATBUFFERS_INPUT_FILES})
+        COMMAND ${MOVE_COMMAND} DcdrFlatBuffers_generated.h  ${DCDR_FLATBUFFERS_GENERATED_CPP_FOLDER}/DcdrFlatBuffers.h
+        COMMAND ${MOVE_COMMAND} DcdrFlatBuffers_generated.js ${DCDR_FLATBUFFERS_GENERATED_JS_FOLDER}/DcdrFlatBuffers.js
+		
+        DEPENDS flatc ${DCDR_FLATBUFFERS_INPUT_FILES}		
+		VERBATIM)
 
 add_custom_target(${PROJECT_NAME}
         DEPENDS ${DCDR_FLATBUFFERS_GENERATED_FILES})
