[Interconnect] Implemented Deserialization for commander request; Added unit tests for commander requests

--- a/dcdr-interconnect/CMakeLists.txt
+++ b/dcdr-interconnect/CMakeLists.txt
@@ -20,12 +20,14 @@ file(GLOB DCDR_INTERCONNECT_COMMON_SOURCES src/messaging/*.cpp)
 file(GLOB DCDR_INTERCONNECT_COMMANDER_SOURCES src/messaging/commander/*.cpp)
 file(GLOB DCDR_INTERCONNECT_WORKER_SOURCES src/messaging/worker/*.cpp)
 file(GLOB DCDR_INTERCONNECT_FLATBUFFERS_SOURCES src/messaging/flatbuffers/*.cpp)
+file(GLOB DCDR_INTERCONNECT_FLATBUFFERS_PRIVATE_SOURCES src/messaging/flatbuffers/private/*.cpp)
 
 set(SOURCE_FILES ${DCDR_INTERCONNECT_INCLUDES}
         ${DCDR_INTERCONNECT_COMMON_SOURCES}
         ${DCDR_INTERCONNECT_COMMANDER_SOURCES}
         ${DCDR_INTERCONNECT_WORKER_SOURCES}
-        ${DCDR_INTERCONNECT_FLATBUFFERS_SOURCES})
+        ${DCDR_INTERCONNECT_FLATBUFFERS_SOURCES}
+        ${DCDR_INTERCONNECT_FLATBUFFERS_PRIVATE_SOURCES})
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
 include_directories(${FlatBuffers_SOURCE_DIR}/include)
