[Transport][Gui][Interconnect][Server] I implemented Tcp transport classes (Sync & Async); Updated Gui code; Modified Interconnect. Server groundwork has been started

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(dcdr-common)
 add_subdirectory(dcdr-logger)
 add_subdirectory(dcdr-pathtracer)
 add_subdirectory(dcdr-worker)
+add_subdirectory(dcdr-transport)
 add_subdirectory(dcdr-interconnect)
 add_subdirectory(dcdr-server)
 add_subdirectory(dcdr-webui)
