--- a/dcdr-gui/CMakeLists.txt
+++ b/dcdr-gui/CMakeLists.txt
@@ -5,7 +5,7 @@ file(GLOB DCDR_GUI_INCLUDES src/*.h)
 
 add_executable(${PROJECT_NAME} ${DCDR_GUI_SOURCES} ${DCDR_GUI_INCLUDES})
 
-set(DCDR_GUI_LINKS dcdr-interconnect nana)
+set(DCDR_GUI_LINKS dcdr-interconnect dcdr-transport dcdr-logger nana)
 
 if(UNIX)
     set(DCDR_GUI_LINKS ${DCDR_GUI_LINKS} fontconfig pthread)
