[Server] Server entities groundwork

--- a/dcdr-server/CMakeLists.txt
+++ b/dcdr-server/CMakeLists.txt
@@ -1,10 +1,20 @@
 project(dcdr-server)
 
+
+file(GLOB INCLUDES_SERVER include/dcdr/server/*.h)
+
+set(INCLUDE_FILES
+		${INCLUDES_SERVER})
+
+file(GLOB SOURCES_SERVER src/server/*.cpp)
+
+set(SOURCE_FILES
+		${SOURCES_SERVER}
+		src/main.cpp)
+
 include_directories(include)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
-
-target_link_libraries(${PROJECT_NAME} PRIVATE mongoose)
+add_executable(${PROJECT_NAME} ${INCLUDE_FILES} ${SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE dcdr-common dcdr-logger dcdr-interconnect dcdr-transport)
 
