[Server] Surface and Chunk unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ enable_testing()
 add_subdirectory(test-utils)
 add_subdirectory(umath-test)
 add_subdirectory(dcdr-interconnect-test)
+add_subdirectory(dcdr-server-test)
