[Server] Commander Service groundwork

--- a/dcdr-server/CMakeLists.txt
+++ b/dcdr-server/CMakeLists.txt
@@ -2,14 +2,30 @@ project(dcdr-server)
 
 
 file(GLOB INCLUDES_SERVER include/dcdr/server/*.h)
+file(GLOB INCLUDES_SERVER_CORE include/dcdr/server/core/*.h)
+file(GLOB INCLUDES_SERVER_LOADERS include/dcdr/server/loaders/*.h)
+file(GLOB INCLUDES_SERVER_SERVICE_COMMANDER include/dcdr/server/service-commander/*.h)
+file(GLOB INCLUDES_SERVER_SERVICE_WORKER include/dcdr/server/service-worker/*.h)
 
 set(INCLUDE_FILES
-		${INCLUDES_SERVER})
+		${INCLUDES_SERVER}
+		${INCLUDES_SERVER_CORE}
+		${INCLUDES_SERVER_LOADERS}
+		${INCLUDES_SERVER_SERVICE_COMMANDER}
+		${INCLUDES_SERVER_SERVICE_WORKER})
 
 file(GLOB SOURCES_SERVER src/server/*.cpp)
+file(GLOB SOURCES_SERVER_CORE src/server/core/*.cpp)
+file(GLOB SOURCES_SERVER_LOADERS src/server/loaders/*.cpp)
+file(GLOB SOURCES_SERVER_SERVICE_COMMANDER src/server/service-commander/*.cpp)
+file(GLOB SOURCES_SERVER_SERVICE_WORKER src/server/service-worker/*.cpp)
 
 set(SOURCE_FILES
-		${SOURCES_SERVER})
+		${SOURCES_SERVER}
+		${SOURCES_SERVER_CORE}
+		${SOURCES_SERVER_LOADERS}
+		${SOURCES_SERVER_SERVICE_COMMANDER}
+		${SOURCES_SERVER_SERVICE_WORKER})
 
 include_directories(include)
 
@@ -23,5 +39,6 @@ if (NOT WIN32)
 	target_link_libraries(${PROJECT_NAME} PRIVATE pthread)
 endif()
 
+# Actual dcdr-server core. Module has been divided into lib/bin to allow bore flexible testing
 add_executable(${PROJECT_NAME}-bin src/main.cpp)
 target_link_libraries(${PROJECT_NAME}-bin ${PROJECT_NAME})
