--- a/dcdr-worker/CMakeLists.txt
+++ b/dcdr-worker/CMakeLists.txt
@@ -1,10 +1,26 @@
 project(dcdr-worker)
 
-set(SOURCE_FILES
-        src/main.cpp)
+file(GLOB INCLUDES_WORKER include/dcdr/worker/*.h)
 
-include_directories(${PROJECT_SOURCE_DIR}/src)
+set(INCLUDES
+        ${INCLUDES_WORKER})
 
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+file(GLOB SOURCES_WORKER src/*.cpp)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE dcdr-pathtracer)
+set(SOURCES
+        ${SOURCES_WORKER})
+
+include_directories(include)
+
+add_library(${PROJECT_NAME} STATIC ${INCLUDES} ${SOURCES})
+
+target_link_libraries(${PROJECT_NAME} PRIVATE
+        dcdr-common
+        dcdr-transport
+        dcdr-interconnect
+        dcdr-pathtracer)
+
+target_link_libraries(${PROJECT_NAME} PUBLIC
+        dcdr-logger)
+
+target_include_directories(${PROJECT_NAME} PUBLIC include)
