--- a/dcdr-worker-cli/CMakeLists.txt
+++ b/dcdr-worker-cli/CMakeLists.txt
@@ -6,4 +6,4 @@ file(GLOB SOURCES src/*.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE dcdr-worker)
+target_link_libraries(${PROJECT_NAME} PRIVATE dcdr-worker dcdr-common)
